tp_be/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tpbedeployment
  namespace: taxp
spec:
  selector:
    matchLabels:
      name: podkoname
  replicas: 1
  template:
    metadata:
      labels:
        name: podkoname
    spec:
      containers:
      - name: tpbecontainer
        image: uzumakinabin/tp_backend_itax
        ports:
        - containerPort: 5206
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "1024Mi"
