tp_be/service.yml
apiVersion: v1
kind: Service
metadata:
  name: svckoname
  namespace: taxp
spec:
  selector:
    name: podkoname
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5206
